--- a/README
+++ b/README
@@ -24,11 +24,15 @@ Fixes:
 - Easier abililty to win fight level 5 and under.
 - At level 6 and up, monster attributes are better randomized and can potentially be a value a little less than the player.  Fights are still hard to win but it's possible now.
 
+
 Cosmetic:
 - Changed the monsters and bosses to Marvel Super Villians and included matching profile pictures.
 - Expanded weapons and armor.
 
 New Features:
+- When choosing a monster to fight, XP and Banana amounts are hidden.
+- New skills: Ape Luck (critChance), Ape Critial Damage (critDamage).
+- Sidekicks expanded, player gets Club X NFTs and Bosses get canon correct Marvel characters.
 
 Bugs:
 - On compliation, the TypeScript object for monster images is wrong in some way and it throws an error on compliation however the resulting javascript seems to work as expected, so this can be ignored for now until I learn TS better.
@@ -37,10 +41,9 @@ To Do:
 - Structure boss rewards and potentially difficulty based on the number of participants in the fight.  More participants, less bananas and XP and strong bosses.
 - Improved and more descriptive help subsystem.
 - Expand pets and skills.
-- Adjustment of banana currency?  Not sure what this request is referring to.
 - Create .env.sample in repo so there is an example of what to make the .env look like.
 - More shortcut keys.
 - Enable the gambling module.
 - Heal skill allows for hp more than maximum, find way to limit to maximum hp at any one time.
 - Randomize banana and xp from boss.
-- Hide banana and hp from monsters so player doesn't know.
+- Hide Boss sidekicks?  Currently price is beyond what player can afford.
