--- a/README
+++ b/README
@@ -30,15 +30,15 @@ Cosmetic:
 
 New Features:
 - When choosing a monster to fight, XP and Banana amounts are hidden.
-- Banana and XP earned are now tied to level, this number will need to be tweaks for play balance.
+- Banana and XP earned from monsters are now tied to level, this number will need to be tweaks for play balance.
 - New skills: Ape Luck (critChance), Ape Critial Damage (critDamage).
 - Sidekicks expanded and separated into specific sidekicks for player, monster and boss.
+- Bosses are now more dynamic and XP/Bananas are shared.  Bosses will get strong with increased stats, the more players, the more attributes get increased.
 
 Bugs:
 - On compliation, the TypeScript object for monster images is wrong in some way and it throws an error on compliation however the resulting javascript seems to work as expected, so this can be ignored for now until I learn TS better.
 
 To Do:
-- Structure boss rewards and potentially difficulty based on the number of participants in the fight.  More participants, less bananas and XP and strong bosses.
 - Improved and more descriptive help subsystem.
 - Create .env.sample in repo so there is an example of what to make the .env look like.
 - More shortcut keys.
