--- a/README
+++ b/README
@@ -45,3 +45,4 @@ To Do:
 - Enable the gambling module.
 - Heal skill allows for hp more than maximum, find way to limit to maximum hp at any one time.
 - Randomize banana and xp from boss.
+- If you die fighting a boss, no XP ro bananas for you!
