--- a/README
+++ b/README
@@ -47,3 +47,4 @@ To Do:
 - Heal skill allows for hp more than maximum, find way to limit to maximum hp at any one time.
 - Find a way to make dead players not get xp or bananas.
 - Win/Hunt% should exclude boss fights so not to go over 100%
+- Harder the monster, more bananas and xp?
